# PS_Sort

./: AUTHORS  Makefile.am  Makefile.in  README  TAGS  alg_principal.h  alg_sequential.c  alg_threads.c  call_sequential.h  configure  configure.ac  experiment.org  main.c  measure.c  run_exp1.sh  sort.c
